--- a/apps/browser-extension/src/index.html
+++ b/apps/browser-extension/src/index.html
@@ -11,6 +11,18 @@
       type="image/x-icon"
       href="apps/browser-extension/src/favicon.ico"
     />
+
+    <style>
+      html,
+      body {
+        margin: 0;
+        padding: 0;
+      }
+
+      a {
+        text-decoration: none;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
