test: Add dynamic elements

--- a/test-sites/index.html
+++ b/test-sites/index.html
@@ -14,6 +14,9 @@
         <li>
           <a href="popup.html"> Popup </a>
         </li>
+        <li>
+          <a href="dynamic-elements.html"> Dynamic elements </a>
+        </li>
       </ul>
     </main>
   </body>
