test: Add blog test site

--- a/test-sites/index.html
+++ b/test-sites/index.html
@@ -17,6 +17,9 @@
         <li>
           <a href="dynamic-elements.html"> Dynamic elements </a>
         </li>
+        <li>
+          <a href="blog/index.html"> Blog </a>
+        </li>
       </ul>
     </main>
   </body>
