--- a/test-sites/dynamic-elements.html
+++ b/test-sites/dynamic-elements.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Dynamic elements</title>
+    <link rel="stylesheet" href="styles/styles.css" />
   </head>
   <body>
     <main>
