--- a/test-sites/index.html
+++ b/test-sites/index.html
@@ -21,6 +21,9 @@
         <li>
           <a href="blog/index.html"> Blog </a>
         </li>
+        <li>
+          <a href="alert/index.html"> Alert </a>
+        </li>
       </ul>
     </main>
   </body>
