test: Add confirmation tests

--- a/test-sites/alert/index.html
+++ b/test-sites/alert/index.html
@@ -41,7 +41,7 @@
     buttons.viewConfirm.addEventListener('click', () => {
       const result = window.confirm('Are you sure?');
 
-      promptContent.textContent = result ? 'Confirmed' : 'Not confirmed';
+      viewConfirmContent.textContent = result ? 'Confirmed' : 'Not confirmed';
     });
   </script>
 </html>
