chore: Make extension script names consistent

--- a/test-sites/index.html
+++ b/test-sites/index.html
@@ -13,7 +13,7 @@
           <a href="article.html"> Article </a>
         </li>
         <li>
-          <a href="popup.html"> Popup </a>
+          <a href="popup.html"> PopupRoot </a>
         </li>
         <li>
           <a href="dynamic-elements.html"> Dynamic elements </a>
