--- a/test-sites/popup.html
+++ b/test-sites/popup.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Popup</title>
+    <title>PopupRoot</title>
     <link rel="stylesheet" href="styles/styles.css" />
   </head>
   <body>
