feat: add option to clear input before typing

--- a/test-sites/index.html
+++ b/test-sites/index.html
@@ -24,6 +24,9 @@
         <li>
           <a href="alert/index.html"> Alert </a>
         </li>
+        <li>
+        <a href="input/index.html"> Input </a>
+        </li>
       </ul>
     </main>
   </body>
